--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "jspm": {
     "dependencies": {
+      "ramda": "npm:ramda@^0.22.1",
       "rxjs": "npm:rxjs@^5.0.0-rc.1"
     },
     "devDependencies": {
