Add ramda types. They seem to be an older version but will be compatible

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "jspm": "^0.16.46",
-    "live-server": "^1.1.0"
+    "live-server": "^1.1.0",
+    "typings": "^1.4.0"
   }
 }
